Fixed bug #45392 (ob_start()/ob_end_clean() and memory_limit).